# romoulade

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: coverage.sh
src/: main.rs  perf.rs  utils.rs
src/gb/: bus.rs  cartridge.rs  constants.rs  cpu.rs  display.rs  instruction.rs  interrupt.rs  joypad.rs  mod.rs  oam.rs  registers.rs  serial.rs  test_support.rs  tests.rs  timer.rs  timings.rs  utils.rs
src/gb/audio/: mod.rs
src/gb/bus/: constants.rs  mod.rs
src/gb/cartridge/: controller.rs  mbc1.rs  mbc3.rs  mbc5.rs  mod.rs  nombc.rs  tests.rs
src/gb/cpu/: instruction.rs  interrupt.rs  misc.rs  mod.rs  ops.rs  registers.rs  tests.rs
src/gb/cpu/tests/: cpu.rs  instruction.rs  interrupt.rs  mod.rs  ops.rs
src/gb/debugger/: breakpoint.rs  bus.rs  event.rs  format.rs  mod.rs  tests.rs  utils.rs
src/gb/dma/: mod.rs  vram.rs
src/gb/joypad/: mod.rs  tests.rs
src/gb/memory/: constants.rs  mod.rs
src/gb/ppu/: buffer.rs  cgb.rs  display.rs  fetcher.rs  misc.rs  mod.rs  registers.rs  tests.rs
src/gb/tests/: joypad.rs  mod.rs  timer.rs
src/gui/: emulator.rs  frontend.rs  macros.rs  mod.rs  state.rs
src/gui/debugger/: disasm.rs  macros.rs  memory.rs  mod.rs  registers.rs
