[package]
name = "romoulade"
version = "0.2.0"
authors = ["gcarq <egger.m@protonmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = { version = "0.5.1", default-features = false, features = ["std"] }
bitflags = { version = "2.13.0", default-features = false }
bitvec = { version = "1.1.1", default-features = false }
clap = { version = "4.6.1", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
dyn-clone = { version = "1.0.20", default-features = false }
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui_extras = { version = "0.35.0", default-features = false }
itertools = { version = "0.15.0", default-features = false, features = ["use_std"] }
rfd = { version = "0.15.3", default-features = false, features = ["xdg-portal", "async-std"] }
spin_sleep = { version = "1.3.1", default-features = false, features = [] }
thiserror = { version = "2.0.12", default-features = false, features = ["std"] }


[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
codegen-units = 8

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
