[package]
name = "romoulade"
version = "0.2.0"
authors = ["gcarq <egger.m@protonmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.103", default-features = false, features = ["std"] }
arraydeque = { version = "0.5.1", default-features = false, features = ["std"] }
bitflags = { version = "2.13.0", default-features = false }
bitvec = { version = "1.1.1", default-features = false }
clap = { version = "4.6.1", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
dyn-clone = { version = "1.0.20", default-features = false }
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui_extras = { version = "0.35.0", default-features = false }
fern = { version = "0.7.1", default-features = false, features = ["colored"] }
itertools = { version = "0.15.0", default-features = false, features = ["use_std"] }
log = { version = "0.4.33", default-features = false }
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
spin_sleep = { version = "1.3.3", default-features = false}

[lints.clippy]
dbg_macro = "warn"
disallowed_script_idents = "warn"
empty_structs_with_brackets = "warn"
filter_map_next = "warn"
format_collect = "warn"
from_iter_instead_of_collect = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
missing_panics_doc = "warn"
non_std_lazy_statics = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
upper_case_acronyms = "allow"
use_debug = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
codegen-units = 8

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
